+++++++++++
Python News
+++++++++++

What's New in Python 2.7.14?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #28932: Do not include <sys/random.h> if it does not exist.

Library
-------

- Issue #28998: More APIs now support longs as well as ints.

- Issue 28923: Remove editor artifacts from Tix.py,
  including encoding not recognized by codecs.lookup.

- Issue #29019: Fix dict.fromkeys(x) overallocates when x is sparce dict.
  Original patch by Rasmus Villemoes.

- Issue #28871: Fixed a crash when deallocate deep ElementTree.

- Issue #19542: Fix bugs in WeakValueDictionary.setdefault() and
  WeakValueDictionary.pop() when a GC collection happens in another
  thread.

- Issue #28925: cPickle now correctly propagates errors when unpickle instances
  of old-style classes.


What's New in Python 2.7.13
===========================

*Release date: 2016-12-17*

Core and Builtins
-----------------

- Revert a37cc3d926ec (Issue #5322).


What's New in Python 2.7.13 release candidate 1?
================================================

*Release date: 2016-12-03*

Core and Builtins
-----------------

- Issue #5322: Fixed setting __new__ to a PyCFunction inside Python code.
  Original patch by Andreas Stührk.

- Issue #28847: dumbdbm no longer writes the index file in when it is not
  changed and supports reading read-only files.

- Issue #11145: Fixed miscellaneous issues with C-style formatting of types
  with custom __oct__ and __hex__.

- Issue #24469: Fixed memory leak caused by int subclasses without overridden
  tp_free (e.g. C-inherited Cython classes).

- Issue #19398: Extra slash no longer added to sys.path components in case of
  empty compile-time PYTHONPATH components.

- Issue #21720: Improve exception message when the type of fromlist is unicode.
  fromlist parameter of __import__() only accepts str in Python 2 and this
  will help to identify the problem especially when the unicode_literals